# bioalgo

./: .gitignore  README.md  main.py  pyproject.toml  run_all_experiments.py
experiments/: base_experiment.py  population_time.py
hw1/: README.md  pyproject.toml
hw1/experiments/: crossover_rate.py  mutation_rate.py  population_size.py
hw1/lib/: config.py  visualization.py
hw2/: README.md  main.py  run_all_experiments.py
lab1/: README.md  pyproject.toml
lab1/js/: visualization.js
lab1/lab1/: bruteforce.py  generate.py  genetic.py  report.py
lab1/lab1/data/option1/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option2/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option3/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option4/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option5/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option6/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option7/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/option8/: brute_force_results.csv  genetic_results.csv  knapsack_problems.csv  knapsack_vectors.csv
lab1/lab1/data/results/: statistics_variant_1.csv  statistics_variant_2.csv  statistics_variant_3.csv  statistics_variant_4.csv  statistics_variant_5.csv  statistics_variant_6.csv  statistics_variant_7.csv  statistics_variant_8.csv  summary_statistics.csv
lab2/: README.md  index.html
(+15 files in other folders)
