[tool.poetry]
name = "genetic_algorithm"
version = "0.1.0"
description = "Simple genetic algorithm for finding minimum of a function"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
