[tool.poetry]
name = "hw1"
version = "0.1.0"
package-mode = false
description = "Simple genetic algorithm for finding minimum of a function"
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
