[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Krasnopolsky",email = "i1.krasnopolskiy@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
